--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -49,4 +53,14 @@ button {
     border: 1px solid red;
 
     font-size: 18pt;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    width: 95%;
+    margin: 10px 2.5%;
+    padding: 10px;
+
+    user-select: none;
 }
